# python-talks

./: .gitignore  README.md
2022_10_pycones/: .gitignore  README.md  index.html  requirements.txt  segemtationfaultfest.md
2022_10_pycones/01_happy_path/: _binarysearch.pyx  benchmark.py  binarysearch.py  binarysearch_cython.py  binarysearch_native.py  binarysearch_python.py  constants.py  profiling.sh  requirements.txt  run.sh  setup.py
2022_10_pycones/01_happy_path/flamegraphs/: binarysearch_cython.prof  binarysearch_native.prof
2022_10_pycones/01_happy_path/src/: CMakeLists.txt  binarysearch.cpp  binarysearch.hpp
2022_10_pycones/02_segmentation_fault/: _segmentation.c  _segmentation.pyx  run.sh  segmentation.py  setup.py
